# rust-dnd-back

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.dev.yaml  docker-compose.yaml
.cargo/: config.toml
conf/: load-env.sh  nginx.conf
crates/backend/: Cargo.toml
crates/backend/migrations/: 20251228003517_create_board_states.down.sql  20251228003517_create_board_states.up.sql  20251228004506_create_users_totp.up.sql
crates/backend/src/: config.rs  docs.rs  error.rs  http_rate_limit.rs  lib.rs  main.rs  state.rs  ws_policy.rs
crates/backend/src/handler/: mod.rs
crates/backend/src/handlers/: auth.rs  mod.rs  room.rs
crates/backend/src/utils/: crypto.rs  jwt.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: config.rs  i18n.rs  main.rs
crates/frontend/src/components/: app.rs  chat.rs  conflict_resolver.rs  cursor.rs  draggable_window.rs  language_selector.rs  login.rs  mod.rs  register.rs  room_selector.rs  scene_board.rs  scenes.rs  settings.rs  side_menu.rs  statistics.rs  tab_bar.rs  websocket.rs
crates/frontend/src/components/app/: mod.rs  model.rs  mouse_handler.rs  navigation.rs  state.rs  view_model.rs
crates/frontend/src/components/chat/: mod.rs  view.rs  view_model.rs
crates/frontend/src/components/conflict_resolver/: mod.rs  model.rs  view.rs
crates/frontend/src/components/draggable_window/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/language_selector/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/login/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/notes/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/register/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/room_selector/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/scene_board/: board_note_helpers.rs  board_toolbar.rs  interaction_state.rs  mod.rs  model.rs  scene_geometry.rs  storage.rs  token_editor.rs  token_layer.rs  token_menu.rs  view.rs  view_model.rs  workspace_hint.rs
crates/frontend/src/components/scenes/: background_fit_editor.rs  mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/settings/: mod.rs  storage.rs  view.rs  view_model.rs
crates/frontend/src/components/side_menu/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/statistics/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/tab_bar/: mod.rs  model.rs  view.rs
crates/frontend/src/components/tokens/: mod.rs  model.rs  view.rs  view_model.rs
crates/frontend/src/components/voting/: mod.rs  types.rs  voting_active.rs  voting_active_model.rs  voting_completion.rs  voting_create.rs  voting_create_view_model.rs  voting_list.rs  voting_results.rs
crates/frontend/src/components/websocket/: connection.rs  crypto.rs  file_transfer.rs  mod.rs  snapshot_codec.rs  storage.rs  sync.rs  types.rs  utils.rs  voting_handler.rs
crates/frontend/src/components/websocket/file_transfer/: mod.rs  utils.rs
crates/frontend/src/components/websocket/handlers/: chat.rs  file.rs  mod.rs  mouse.rs  note.rs  presence.rs  scene.rs  sync.rs  sync_discard.rs
crates/frontend/src/components/websocket/handlers/voting/: cast.rs  conflict.rs  discard.rs  end.rs  hash_select.rs  mod.rs  result.rs  start.rs
crates/frontend/src/utils/: auth.rs  mod.rs  token_refresh.rs
crates/shared/: Cargo.toml
crates/shared/src/auth/: mod.rs
crates/shared/src/events/: board.rs  chat.rs  crypto.rs  file.rs  mod.rs  mouse.rs  mouse_move.rs  note.rs  params.rs  room.rs  scene.rs  sync.rs  voting.rs
docs/: DOCKER.md  requests.http
docs/dotenv/: .env.docker.example  .env.example
src/: docs.rs  lib.rs  main.rs  state.rs
src/handlers/: mod.rs
src/handlers/events/: chat.rs  mod.rs  mouse_move.rs
