[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Локальная зависимость
shared = { path = "../shared", features = ["schemas"] }

tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
redis = { version = "1.0.2", features = ["tokio-comp"] }
#uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3" # Полезно для работы со стримами веб-сокетов
dotenvy = "0.15"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

