[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", default-features = false }

leptos = { version = "0.8.15", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }

serde_json = "1.0"

gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
wasm-bindgen-futures = "0.4.56"
log = "0.4.29"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }